@@ -178,21 +178,21 @@ $addColumnArray = Array(
 );
 t3lib_extMgm::addTCAcolumns('fe_users', $addColumnArray);
 
-$TCA['fe_users']['interface']['showRecordFieldList'] = preg_replace('/,\s*country/', ',zone,static_info_country,country,language', $TCA['fe_users']['interface']['showRecordFieldList']);
-$TCA['fe_users']['interface']['showRecordFieldList'] = preg_replace('/,\s*title/', ',gender,status,date_of_birth,title', $TCA['fe_users']['interface']['showRecordFieldList']);
+$TCA['fe_users']['interface']['showRecordFieldList'] = preg_replace('/(^|,)\s*country\s*(,|$)/', '$1zone,static_info_country,country,language$2', $TCA['fe_users']['interface']['showRecordFieldList']);
+$TCA['fe_users']['interface']['showRecordFieldList'] = preg_replace('/(^|,)\s*title\s*(,|$)/', '$1gender,status,date_of_birth,title$2', $TCA['fe_users']['interface']['showRecordFieldList']);
 
 $additionalFields = '';
 if (strpos($TCA['fe_users']['feInterface']['fe_admin_fieldList'],'first_name') === FALSE) {
 	$additionalFields = 'first_name,middle_name,last_name,';
 }
 
-$TCA['fe_users']['feInterface']['fe_admin_fieldList'] = preg_replace('/,\s*title/', ',gender,' . $additionalFields . 'cnum,status,title', $TCA['fe_users']['feInterface']['fe_admin_fieldList']);
+$TCA['fe_users']['feInterface']['fe_admin_fieldList'] = preg_replace('/(^|,)\s*title\s*(,|$)/', '$1gender,' . $additionalFields . 'cnum,status,title$2', $TCA['fe_users']['feInterface']['fe_admin_fieldList']);
 $TCA['fe_users']['feInterface']['fe_admin_fieldList'] .= ',image,disable,date_of_birth,by_invitation,terms_acknowledged,tx_srfeuserregister_password';
-$TCA['fe_users']['feInterface']['fe_admin_fieldList'] = preg_replace('/,\s*country/', ',zone,static_info_country,country,language,comments', $TCA['fe_users']['feInterface']['fe_admin_fieldList']);
+$TCA['fe_users']['feInterface']['fe_admin_fieldList'] = preg_replace('/(^|,)\s*country\s*(,|$)/', '$1zone,static_info_country,country,language,comments$2', $TCA['fe_users']['feInterface']['fe_admin_fieldList']);
 
-$TCA['fe_users']['types']['0']['showitem'] = preg_replace('/,\s*country/', ', zone, static_info_country, country, language', $TCA['fe_users']['types']['0']['showitem']);
-$TCA['fe_users']['types']['0']['showitem'] = preg_replace('/,\s*address/', ', status, date_of_birth, address', $TCA['fe_users']['types']['0']['showitem']);
-$TCA['fe_users']['types']['0']['showitem'] = preg_replace('/,\s*www/', ', www, comments, by_invitation, terms_acknowledged', $TCA['fe_users']['types']['0']['showitem']);
+$TCA['fe_users']['types']['0']['showitem'] = preg_replace('/(^|,)\s*country\s*(,|$)/', '$1 zone, static_info_country, country, language$2', $TCA['fe_users']['types']['0']['showitem']);
+$TCA['fe_users']['types']['0']['showitem'] = preg_replace('/(^|,)\s*address\s*(,|$)/', '$1 status, date_of_birth, address$2', $TCA['fe_users']['types']['0']['showitem']);
+$TCA['fe_users']['types']['0']['showitem'] = preg_replace('/(^|,)\s*www\s*(,|$)/', '$1 www, comments, by_invitation, terms_acknowledged$2', $TCA['fe_users']['types']['0']['showitem']);
 
 $TCA['fe_users']['palettes']['2']['showitem'] = 'gender,--linebreak--,' . $TCA['fe_users']['palettes']['2']['showitem'];
 
